[package]
name = "server"
version = "0.1.0"
authors = ["João Foscarini <jfoscarini@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
env_logger = { version = "0.9" }
clap = { version = "4.0", features = ["derive"] }
mio = { version = "0.8", features = ["os-poll", "net"] }